Fixes for Linux

--- a/integrations/esri-sceneview-wasm/esri.html
+++ b/integrations/esri-sceneview-wasm/esri.html
@@ -445,8 +445,8 @@
         externalRenderers.add(view, vaultSDKRenderer);
       });
     </script>
-    <script async src=udsdkjs.js></script>
-    <script async src=easyudsdkjs.js></script>
+    <script async src=udSDKjs.js></script>
+    <script async src=easyudSDKjs.js></script>
   </head>
 
   <body>
