--- a/integrations/cesium/CesiumEuclideonIntegration.html
+++ b/integrations/cesium/CesiumEuclideonIntegration.html
@@ -53,7 +53,15 @@
       var udSDKReady = 0;
 
       var viewer = new Cesium.Viewer("cesiumContainer", {
-        scene3DOnly: true
+        scene3DOnly: true,
+        imageryProvider: new Cesium.UrlTemplateImageryProvider({
+          url: 'https://slippy.vault.euclideon.com/aerial/{z}/{x}/{y}.png',
+          credit: new Cesium.Credit(`© ${new Date().getFullYear()} TomTom, Microsoft`, true),
+          maximumLevel: 18,
+          enablePickFeatures: false
+        }),
+        baseLayerPicker: false,
+        geocoder: false,
       });
 
       var colourTextureGL;
@@ -288,16 +296,8 @@
                       var thisWidth = viewer.canvas.width;
                       var thisHeight = viewer.canvas.height;
 
-                      // For some reason the upload only works as a square
-                      if (thisWidth > thisHeight)
-                        thisHeight = thisWidth;
-                      else
-                        thisWidth = thisHeight;
-
                       if (thisWidth != this.prevWidth || thisHeight != this.prevHeight)
                       {
-                        console.log("Resize To: " + thisWidth + "," + thisHeight);
-
                         this.prevWidth = thisWidth;
                         this.prevHeight = thisHeight;
 
@@ -368,29 +368,25 @@
                 };
             }
 
-            var position = Cesium.Cartesian3.fromDegrees(153.0, -27.0, 0.5);
             var myBox = viewer.scene.primitives.add(new VtxfPrimitive());
-
-            viewer.camera.flyToBoundingSphere(new Cesium.BoundingSphere(position, 100000));
 
     </script>
 
     <script>
-      function udSDKPluginInit() {
-        udSDKReady = 1;
-        document.getElementById("loginBox").style.display = "block";
-      };
+      function loadModels() {
+        var model = findGetParameter("model");
 
-      function udSDKPluginLoad(username, password) {
-        if (udSDKReady != 1)
-          Alert("Not ready to login!");
-
-        var status = udSDKJS(username, password, "Cesium");
-
-        if (status == 0)
+        if (typeof model === 'string')
         {
-          console.log("udSDKJS Logged in.");
+          getParamModel = udSDKJS_LoadModel(model);
+          udSDKJS_RenderQueueAddModel(getParamModel, 0.0, 4978);
+          modeldetails = udSDKJS_GetHeaderData(getParamModel);
 
+          var position = Cesium.Cartesian3.fromDegrees(modeldetails.latLong[1], modeldetails.latLong[0], 0.0);
+          viewer.camera.flyToBoundingSphere(new Cesium.BoundingSphere(position, modeldetails.scaledRange));
+        }
+        else
+        {
           udsAerometrixBrisbane = udSDKJS_LoadModel("https://models.euclideon.com/Aerometrex_Brisbane_75mm.uds");
           udSDKJS_RenderQueueAddModel(udsAerometrixBrisbane, 112.0, 4978);
 
@@ -401,10 +397,49 @@
           udSDKJS_RenderQueueAddModel(udsMelb, 150.0, 4978);
 
           udsVancouver = udSDKJS_LoadModel("https://models.euclideon.com/Vancouver.uds");
-          udSDKJS_RenderQueueAddModel(udsVancouver, 227.0, 4978);
+          slot = udSDKJS_RenderQueueAddModel(udsVancouver, 227.0, 4978);
+          if (slot >= 0)
+            udSDKJS_RenderQueueItem_SetClassification(slot);
 
-          udSDKReady = 2;
-          document.getElementById("loginBox").style.display = "none";
+          var position = Cesium.Cartesian3.fromDegrees(153.0, -27.0, 0.5);
+          viewer.camera.flyToBoundingSphere(new Cesium.BoundingSphere(position, 100000));
+        }
+
+        udSDKReady = 2;
+        document.getElementById("loginBox").style.display = "none";
+      }
+
+      function udSDKPluginInit() {
+        udSDKJS_RegisterShared();
+        udSDKReady = 1;
+        if (udSDKJS_Domain("Cesium") == 0)
+          loadModels();
+        else
+          document.getElementById("loginBox").style.display = "block";
+      };
+
+      function findGetParameter(parameterName) {
+          var result = null;
+          var tmp = [];
+          location.search
+              .substr(1)
+              .split("&")
+              .forEach(function (item) {
+                tmp = item.split("=");
+                if (tmp[0] === parameterName) result = decodeURIComponent(tmp[1]);
+              });
+          return result;
+      }
+
+      function udSDKPluginLoad(username, password) {
+        if (udSDKReady != 1)
+          Alert("Not ready to login!");
+
+        var status = udSDKJS_Login(username, password, "Cesium");
+
+        if (status == 0)
+        {
+          loadModels();
         }
         else
         {
@@ -454,6 +489,8 @@
         }
       }
 
+      document.getElementById("passwordTxt").addEventListener("keyup", function(event) { if (event.keyCode === 13) { event.preventDefault(); document.getElementById("loginBtn").click(); }});
+      document.getElementById("usernameTxt").addEventListener("keyup", function(event) { if (event.keyCode === 13) { event.preventDefault(); document.getElementById("loginBtn").click(); }});
       document.getElementById("loginBtn").addEventListener("click", loginVDK);
     </script>
   </body>
