--- a/integrations/cesium/CesiumEuclideonIntegration.html
+++ b/integrations/cesium/CesiumEuclideonIntegration.html
@@ -51,6 +51,72 @@
     </div>
     <script>
       var udSDKReady = 0;
+      var czml = [
+      {
+        id: "document",
+        name: "CZML Position Definitions",
+        version: "1.0",
+      },
+      {
+        id: "point",
+        name: "Point of Interest",
+        position: {
+          cartographicDegrees: [153.0, -27.5, 150.0],
+        },
+        point: {
+          color: {
+            rgba: [100, 0, 200, 255],
+          },
+          outlineColor: {
+            rgba: [200, 0, 200, 255],
+          },
+          pixelSize: {
+            number: 10,
+          },
+        },
+      },
+      {
+        id: "point2",
+        name: "point in cartesian coordinates",
+        position: {
+          cartesian: [
+            1216469.9357990976,
+            -4736121.71856379,
+            4081386.8856866374,
+          ],
+        },
+        point: {
+          color: {
+            rgba: [0, 100, 200, 255],
+          },
+          outlineColor: {
+            rgba: [200, 0, 200, 255],
+          },
+          pixelSize: {
+            number: 10,
+          },
+        },
+      },
+      {
+        id: "point 3",
+        name: "point in cartographic radians",
+        position: {
+          cartographicRadians: [Math.PI, (3 * Math.PI) / 4, 150000],
+        },
+        point: {
+          color: {
+            rgba: [10, 200, 10, 255],
+          },
+          outlineColor: {
+            rgba: [200, 0, 200, 255],
+          },
+          pixelSize: {
+            number: 10,
+          },
+        },
+      },
+    ];
+
 
       var viewer = new Cesium.Viewer("cesiumContainer", {
         scene3DOnly: true
@@ -370,7 +436,7 @@
 
             var position = Cesium.Cartesian3.fromDegrees(153.0, -27.0, 0.5);
             var myBox = viewer.scene.primitives.add(new VtxfPrimitive());
-
+            viewer.dataSources.add(Cesium.CzmlDataSource.load(czml));
             viewer.camera.flyToBoundingSphere(new Cesium.BoundingSphere(position, 100000));
 
     </script>
@@ -385,7 +451,7 @@
         if (udSDKReady != 1)
           Alert("Not ready to login!");
 
-        var status = udSDKJS(username, password, "Cesium");
+        var status = udSDKJS_Login(username, password, "Cesium");
 
         if (status == 0)
         {
