--- a/integrations/esri-sceneview-wasm/esriGTFS.html
+++ b/integrations/esri-sceneview-wasm/esriGTFS.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <title>udSDK Esri Demo</title>
 
-    <link rel="stylesheet" href="https://js.arcgis.com/4.14/esri/themes/light/main.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://js.arcgis.com/4.14/"></script>
+    <link rel="stylesheet" href="https://js.arcgis.com/4.14/esri/themes/light/main.css" crossorigin/>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin></script>
+    <script src="https://js.arcgis.com/4.14/" crossorigin></script>
 
     <style>
       html,
@@ -154,7 +154,8 @@
         "esri/widgets/Home",
         "esri/widgets/Search",
         "esri/layers/FeatureLayer",
-        "esri/layers/SceneLayer"
+        "esri/layers/SceneLayer",
+        "esri/layers/StreamLayer"
       ], function(
         esriConfig,
         declare,
@@ -164,7 +165,8 @@
         Home,
         Search,
         FeatureLayer,
-        SceneLayer
+        SceneLayer,
+        StreamLayer
       ) {
         esriConfig.apiKey = "AAPK36ad84bb53c94118ba38eadcf7c64293iwmPOwWtSMg-NwRSH9g4uPQQCQ218TONGNtew4TTyvumJN5444JmU8Beh8ZKCGyR";
         // Set up the external renderer
@@ -483,6 +485,31 @@
           id: 1
         }); 
 
+        const transRenderer = {
+          "type": "simple",
+          "symbol": {
+            "type": "picture-marker",
+            "url": "./img/stops.png",
+            "width": "12px",
+            "height": "12px"
+          }
+        };
+
+        var transportLayer = new StreamLayer({
+          url: "https://geoeventsample1.esri.com:6443/arcgis/rest/services/LABus/StreamServer",
+          // url: "http://localhost:4006/gtfsrt-veh-pos",
+          data: {
+            numberOfVehicle: 20
+          },
+          purgeOptions: {
+            displayCount: 1000
+          },
+          maxReconnectionAttempts: 100,
+          maxReconnectionInterval: 3,
+          renderer: null,
+        });
+
+        map.add(transportLayer);
         map.add(stopsLayer);
 
         // Add the home button to the top left corner of the view
